# sensor-node

./: .gitignore  CMakeLists.txt  README.md  compile_and_flash.sh  prj.conf  rpi_pico.overlay  sample.yaml
drivers/adxl345/zephyr/: CMakeLists.txt  Kconfig  adxl345.c  adxl345.h  adxl345_old.c  adxl345_registers.h
drivers/bme680/zephyr/: CMakeLists.txt  Kconfig  bme680.c  bme680.h  bme680_old.c  bme680_registers.h
drivers/ultrasonic/zephyr/: CMakeLists.txt  Kconfig  ultrasonic.c  ultrasonic.h
include/: i2c_registers.h  i2c_slave.h  sample.h
src/: i2c_slave.c  main.c  sample.c
tests/sensor-node/: CMakeLists.txt  testcase.yaml
tests/sensor-node/src/: main.c
